# dppee-admin-manager

./: Cargo.toml  README.md  api-readme.http  application.yml  log4rs.yaml
da-common/: Cargo.toml
da-common/src/utils/: auth.rs  jwt_util.rs  mod.rs
da-manager/: Cargo.toml
da-manager/src/: errors.rs  lib.rs  main.rs
da-manager/src/controller/: dict_controller.rs  mod.rs  sys_contorller.rs  sys_controller.rs
da-manager/src/controller/vo/: dict_vo.rs  mod.rs  sys_vo.rs
da-manager/src/entity/: config.rs  dict_entity.rs  mod.rs  sys_entity.rs
da-manager/src/entity/dto/: dict.rs
da-manager/src/mapper/: SysDistMapper.rs  dict_mapper.rs  mod.rs  sys_dict_mapper.rs  sys_mapper.rs
da-manager/src/service/: dist_service.rs  mod.rs  sys_dist_service.rs  sys_service.rs
da-manager/src/utils/: mod.rs  result_body.rs
