[package]
name = "da-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum="0.6.18"
tokio = { version = "1", features = ["full"] }

#rbatis deps
rbs = { version = "4.3"}
rbatis = { version = "4.3"}
rbdc-mysql = { version = "4.3" }

#other deps
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.96"
log = "0.4"
fast_log = "1.5"
time = { version = "0.3.5", features = ["macros"] }

#lazy
once_cell = "1.9"
futures-util = "0.3.21"
parking_lot = "0.12.1"