[package]
name = "da-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum="0.6.18"
tokio = { version = "1", features = ["full"] }

#rbatis deps
rbs = { version = "4.3"}
rbatis = { version = "4.3"}
rbdc-mysql = { version = "4.3" }

#other deps
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.25"
log = "0.4"
log4rs = "1.0"
time = { version = "0.3.5", features = ["macros"] }
getset = "0.1.2"

#对象存储
state = { version = "0.5", features = ["tls"] }

#lazy
once_cell = "1.9"
futures-util = "0.3.21"
parking_lot = "0.12.1"

da-common = { path = "../da-common" }
